hphp/test/quick/redeclared_method2.php.expectf

Fatal error: Cannot make static method I::foo() non-static in class C in %s on line 5
